--- a/calentamiento_peru.qmd
+++ b/calentamiento_peru.qmd
@@ -309,7 +309,7 @@ make_base_weekly_heatmap <- function(weekly_dataset,
             y = "Semana",
             title = "El invierno de Lima 2023 fue de los más\ncálidos desde el Fenómeno El Niño 1997/98",
             subtitle = "Temperaturas semanales promedio y «niños» de intensidad fuerte",
-            caption = "Elaboración: Gonzalo Talavera Forlin - desarro.io\nFuente: ncei.noaa.gov - Temperaturas diarias promedio en la estación del Aeropuerto Internacional Jorge Chávez.\nNo hay datos disponibles para los años 2013 ni 2014. Promedios semanales calculados a partir de las temperaturas\ndiarias promedio",
+            caption = "Elaboración: Gonzalo Talavera Forlin - desarro.io\nFuente: ncei.noaa.gov - Temperaturas diarias promedio en la estación del Aeropuerto Internacional Jorge Chávez.\nPromedios semanales calculados a partir de las temperaturas\ndiarias promedio",
             fill = "") + 
         guides(fill = guide_colourbar(barheight = unit(0.075, "inches"))) +
         theme_heatmap()
@@ -323,14 +323,19 @@ args(make_base_weekly_heatmap)
 ```{r create_baselpot, fig.width=6, fig.height=6}
 #| echo: false
 
+df_week_heat <- filter(
+    weekly_averages,
+    year >= 1973,
+    city == "Lima - Callao")
+min_year <- min(df_week_heat$year)
+max_year <- max(df_week_heat$year)
+
 p_base <- make_base_weekly_heatmap(
-    weekly_dataset = 
-        filter(weekly_averages,
-               year > 1981,
-               city == "Lima - Callao"),
+    weekly_dataset = df_week_heat,
     medicion = tavg,
-    custom_breaks_years = c(1990, 2000, 2010, 2020),
-    custom_limits = c(1974, 2035),
+    custom_breaks_years = c(1975, 1980, 1985, 1990, 
+                            1995, 2000, 2005, 2010, 2015, 2020),
+    custom_limits = c(min(df_week_heat$year)-9, max(df_week_heat$year)+10),
     custom_breaks_fill = c(15, 20, 25),
     custom_labels_fill = c("15 °C", "20 °C ", "25 °C"),
     color_palette = "RdBu",
@@ -347,20 +352,38 @@ print(p_base)
 ```{r annotation_list}
 annotations_list <- list(
     # Inicio de año
-    annotate("text", x = 1981, y = 3.5, 
-             label = "Semana 1\nde 1982", 
-             size = 3.5, color = "#F9F7F3", family = "Sanchez", vjust = 1, hjust = 1),
-    geom_curve(aes(x = 1981, y = 1, xend = 1979, yend = 3),
-               curvature = 0.3, color = "#F9F7F3", linewidth = 0.2,
-               arrow = arrow(type = "closed", length = unit(0.05, "inches"))),
+    annotate(
+        "text", x = min_year-1, y = 3.5, 
+        label = paste("Semana 1\nde", min_year), 
+        size = 3.5, color = "#F9F7F3", family = "Sanchez", vjust = 1, hjust = 1),
+    geom_curve(
+        aes(x = min_year-1, y = 1,
+            xend = min_year-3, yend = 3),
+        curvature = 0.3, color = "#F9F7F3", linewidth = 0.2,
+        arrow = arrow(type = "closed", length = unit(0.05, "inches"))),
     # Última semana
-    geom_curve(aes(x = 2023.2, y = 46, xend = 2024.5, yend = 48),
-               curvature = 0.3, color = "#F9F7F3", linewidth = 0.2,
-               arrow = arrow(type = "closed", length = unit(0.05, "inches"))),
-    annotate("text", x = 2025, y = 47,
-             label = "Semana 45\nde 2023",
-             angle = 0, hjust = 0,
-             color = "#F9F7F3", size = 3.5, family = "Sanchez"),
+    annotate(
+        "text", 
+        x = max_year + 2, 
+        y = max(
+            df_week_heat[df_week_heat$year == max_year,]$week) + 3,
+        label = paste(
+            "Semana", 
+            max(
+                df_week_heat[df_week_heat$year == max_year,]$week), 
+            "\nde", 
+            max_year),
+        angle = 0, hjust = 0,
+        color = "#F9F7F3", size = 3.5, family = "Sanchez"),
+    geom_curve(
+        aes(x = max_year + 0.2, 
+            y = max(
+                df_week_heat[df_week_heat$year == max_year,]$week) + 1,
+            xend = max_year + 1.5, 
+            yend = max(
+                df_week_heat[df_week_heat$year == max_year,]$week) + 3),
+        curvature = 0.3, color = "#F9F7F3", linewidth = 0.2,
+        arrow = arrow(type = "closed", length = unit(0.05, "inches"))),
     # FEN 83
     annotate("text", x = 1982.5, y = -0.5, 
              label = "Niño\n82/83", 
